Unit_3/Debugging/3.2/Instructions.md
# Debugging Exercise 3.2

## How to Use the Code Editor

1. Select the "Run Code" button to execute the program.
2. Select the "Calculate Grade" button to generate a score based on the completed tasks.
3. Continue to modify, run, and calculate your code until you are happy with the grade.
4. Select the "Submit" button to turn in the assignment to your instructor.

## Book Instructions

The files provided contain syntax and/or logic errors. In each case, determine and fix the problem, remove all syntax and coding errors, and run the program to ensure it works properly.

## Companion Instructions

The files provided in the code editor to the right contain syntax and/or logic errors. In each case, determine and fix the problem, remove all syntax and coding errors, and run the program to ensure it works properly.

An example of the program is shown below:

```
Enter an integer >> 13
Enter a second integer >> 24
Enter a third integer >> 101
The sum of 13 and 24 is 37
The sum of 24 and 101 is 125
The sum of 13 and 101 is 114
The difference between 13 and 24 is -11
The difference between 24 and 101 is -77
The difference between 13 and 101 is -88
```

## Grading Criterion

Tasks

**Task 1:** The `DebugThree3` class compiles without error.
**Task 2:** The `add()` method adds two integers.
**Task 3:** The `subtract()` method subtracts two integers.
**Task 4:** The `DebugThree2` program accepts user input and displays the correct output.
